--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li class="link"><a href="#contact">Contact</a></li>
     </ul>
     <section id="welcome">
-        <img src="kid.jpg">
+        <img src="jjjjjjj.jpeg">
         <h1>My Favorite hobby is <br><span id="myname">Codeing</span></h1>
         <h2>I love Codeing</h2>
     </section>
